--- a/frontend/apps/templates/home/settings.html
+++ b/frontend/apps/templates/home/settings.html
@@ -72,25 +72,25 @@
     <div class="row">
         <div class="col-12 col-xl-8">
             <div class="card card-body border-0 shadow mb-4">
-                <h2 class="h5 mb-4">General information</h2>
+                <h2 class="h5 mb-4">Información General</h2>
                 <form>
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <div>
-                                <label for="first_name">First Name</label>
-                                <input class="form-control" id="first_name" type="text" placeholder="Enter your first name" required>
+                                <label for="first_name">Nombre</label>
+                                <input class="form-control" id="first_name" type="text" placeholder="Nombre" required>
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <div>
-                                <label for="last_name">Last Name</label>
-                                <input class="form-control" id="last_name" type="text" placeholder="Also your last name" required>
+                                <label for="last_name">Apellido</label>
+                                <input class="form-control" id="last_name" type="text" placeholder="Apellido" required>
                             </div>
                         </div>
                     </div>
                     <div class="row align-items-center">
                         <div class="col-md-6 mb-3">
-                            <label for="birthday">Birthday</label>
+                            <label for="birthday">Fecha de Nacimiento</label>
                             <div class="input-group">
                                 <span class="input-group-text">
                                     <svg class="icon icon-xs" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path></svg>
@@ -99,11 +99,10 @@
                               </div>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="gender">Gender</label>
+                            <label for="gender">Sexo</label>
                             <select class="form-select mb-0" id="gender" aria-label="Gender select example">
-                                <option selected>Gender</option>
-                                <option value="1">Female</option>
-                                <option value="2">Male</option>
+                                <option value="1">Femenino</option>
+                                <option value="2">Masculino</option>
                             </select>
                         </div>
                     </div>
@@ -116,8 +115,8 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
-                                <label for="phone">Phone</label>
-                                <input class="form-control" id="phone" type="number" placeholder="+12-345 678 910" required>
+                                <label for="phone">Teléfono</label>
+                                <input class="form-control" id="phone" type="number" placeholder="+595-982123435" required>
                             </div>
                         </div>
                     </div>
@@ -125,13 +124,13 @@
                     <div class="row">
                         <div class="col-sm-9 mb-3">
                             <div class="form-group">
-                                <label for="address">Address</label>
-                                <input class="form-control" id="address" type="text" placeholder="Enter your home address" required>
+                                <label for="address">Dirección</label>
+                                <input class="form-control" id="address" type="text" placeholder="Dirección" required>
                             </div>
                         </div>
                         <div class="col-sm-3 mb-3">
                             <div class="form-group">
-                                <label for="number">Number</label>
+                                <label for="number">Número</label>
                                 <input class="form-control" id="number" type="number" placeholder="No." required>
                             </div>
                         </div>
@@ -139,8 +138,8 @@
                     <div class="row">
                         <div class="col-sm-4 mb-3">
                             <div class="form-group">
-                                <label for="city">City</label>
-                                <input class="form-control" id="city" type="text" placeholder="City" required>
+                                <label for="city">Ciudad</label>
+                                <input class="form-control" id="city" type="text" placeholder="Ciudad" required>
                             </div>
                         </div>
                         <div class="col-sm-4 mb-3">
@@ -208,11 +207,11 @@
                         </div>
                     </div>
                     <div class="mt-3">
-                        <button class="btn btn-gray-800 mt-2 animate-up-2" type="submit">Save all</button>
+                        <button class="btn btn-gray-800 mt-2 animate-up-2" type="submit">Guardar</button>
                     </div>
                 </form>
             </div>
-            <div class="card card-body border-0 shadow mb-4 mb-xl-0">
+            <!-- <div class="card card-body border-0 shadow mb-4 mb-xl-0">
                 <h2 class="h5 mb-4">Alerts & Notifications</h2>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex align-items-center justify-content-between px-0 border-bottom">
@@ -253,7 +252,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
         <div class="col-12 col-xl-4">
             <div class="row">
                 <div class="col-12 mb-4">
@@ -262,7 +261,7 @@
                         <div class="card-body pb-5">
                             <img src="{{ config.ASSETS_ROOT }}/img/team/profile-picture-1.jpg" class="avatar-xl rounded-circle mx-auto mt-n7 mb-4" alt="Neil Portrait">
                             <h4 class="h3">
-                                Neil Sims
+                                {{ current_user.username }}
                             </h4>
                             <h5 class="fw-normal">
                                 {{ current_user.username }}
@@ -278,12 +277,11 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <div class="card card-body border-0 shadow mb-4">
                         <h2 class="h5 mb-4">Select profile photo</h2>
                         <div class="d-flex align-items-center">
                             <div class="me-3">
-                                <!-- Avatar -->
                                 <img class="rounded avatar-xl" src="{{ config.ASSETS_ROOT }}/img/team/profile-picture-3.jpg" alt="change avatar">
                             </div>
                             <div class="file-field">
@@ -300,13 +298,13 @@
                               </div>                                        
                         </div>
                     </div>
-                </div>
-                <div class="col-12">
+                </div> -->
+                <!-- <div class="col-12">
                     <div class="card card-body border-0 shadow">
                         <h2 class="h5 mb-4">Select cover photo</h2>
                         <div class="d-flex align-items-center">
                             <div class="me-3">
-                                <!-- Avatar -->
+                                Avatar 
                                 <img class="rounded avatar-xl" src="{{ config.ASSETS_ROOT }}/img/profile-cover.jpg" alt="change cover">
                             </div>
                             <div class="file-field">
@@ -323,7 +321,7 @@
                               </div>                                        
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
